--- a/web/package.json
+++ b/web/package.json
@@ -6,6 +6,8 @@
     "build": "parcel build"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.8.2",
     "@mui/styled-engine-sc": "^5.8.0",
     "axios": "^0.27.2",
@@ -17,6 +19,7 @@
   "devDependencies": {
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "buffer": "^6.0.3",
     "parcel": "^2.6.0",
     "process": "^0.11.10"
   }
