--- a/web/package.json
+++ b/web/package.json
@@ -3,7 +3,8 @@
   "source": "src/index.html",
   "scripts": {
     "start": "parcel",
-    "build": "parcel build"
+    "build": "parcel build",
+    "test": "jest"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -17,9 +18,13 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/react-hooks": "^8.0.0",
+    "@types/jest": "^28.1.1",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "buffer": "^6.0.3",
+    "jest": "^28.1.1",
     "parcel": "^2.6.0",
     "process": "^0.11.10"
   }
