--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,8 @@
     "buffer": "^6.0.3",
     "jest": "^28.1.1",
     "parcel": "^2.6.0",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "ts-jest": "^28.0.4",
+    "typescript": "^4.7.3"
   }
 }
