--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "@types/react-dom": "^18.0.5",
     "buffer": "^6.0.3",
     "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
     "parcel": "^2.6.0",
     "process": "^0.11.10",
     "ts-jest": "^28.0.4",
