--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/react-hooks": "^8.0.0",
     "@types/jest": "^28.1.1",
